// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`fireRain should hit clan targets 1`] = `
[
  8,
  2.57,
  2.57,
  3.93,
  2.57,
  2.57,
  3.93,
  8,
  8,
  8,
  8,
]
`;

exports[`fireRain should hit clan targets 2`] = `246`;

exports[`fireRain should hit clan targets 3`] = `
"*Игрок 1* сотворил _Огненный дождь_ на *Игрок 2* нанеся 29.86 урона
\\[ Игрок 2 🔥 💔-5.43/2.57 📖51
Игрок 4 🔥 💔-4.07/3.93 📖33
Игрок 5 🔥 💔-5.43/2.57 📖43
Игрок 6 🔥 💔-5.43/2.57 📖43
Игрок 7 🔥 💔-4.07/3.93 📖33
Игрок 3 🔥 💔-5.43/2.57 📖43 ]"
`;

exports[`fireRain should hit single target if target has no clan 1`] = `
[
  8,
  8,
  8,
  8,
  8,
  8,
  8,
  8,
  2.57,
  8,
  8,
]
`;

exports[`fireRain should hit single target if target has no clan 2`] = `51`;

exports[`fireRain should hit single target if target has no clan 3`] = `
"*Игрок 1* сотворил _Огненный дождь_ на *Игрок 9* нанеся 5.43 урона
\\[ Игрок 9 🔥 💔-5.43/2.57 📖51 ]"
`;
